--- a/templates/ToDoApp/contact_us.html
+++ b/templates/ToDoApp/contact_us.html
@@ -16,7 +16,7 @@
         <div class="col-md-6">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
-                    <h3 class="card-title mb-0">Get in Touch</h3>
+                    <h3 class="card-title mb-0 text-center">Get in Touch</h3>
                 </div>
                 <div class="card-body">
                     <p>If you have any questions or comments, please fill out the form below. We'll get back to you as soon as possible.</p>
@@ -33,7 +33,7 @@
                             <label for="message">Message</label>
                             <textarea class="form-control" id="message" rows="4" placeholder="Your Message" required></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
+                        <button type="submit" class="btn btn-success">Send Message</button>
                     </form>
                 </div>
                 <div class="card-footer bg-light text-center">
@@ -58,7 +58,7 @@
                 <div class="col-md-12">
                     <div class="card shadow-sm mb-4">
                         <div class="card-header bg-primary text-white">
-                            <h3 class="card-title mb-0">Our Contact Information</h3>
+                            <h3 class="card-title mb-0 text-center">Our Contact Information</h3>
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
@@ -77,7 +77,7 @@
                 <div class="col-md-12">
                     <div class="card shadow-sm">
                         <div class="card-header bg-primary text-white">
-                            <h3 class="card-title mb-0">Our Location</h3>
+                            <h3 class="card-title mb-0 text-center">Our Location</h3>
                         </div>
                         <div class="card-body">
                             <div class="map-container">
@@ -113,7 +113,4 @@
 </div>
 
 {% endblock %}
-
-{% block extra_js %}
-<script src="{% static 'js/contact_us.js' %}"></script>
-{% endblock %}
+ 
