--- a/templates/ToDoApp/base.html
+++ b/templates/ToDoApp/base.html
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header class="bg-dark text-white py-3">
         <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="{% url 'home' %}">ToDoApp</a>
+            <a class="navbar-brand" href="{% url 'index' %}">ToDoApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -63,7 +63,10 @@
         </div>
     </footer>
 
+    <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JavaScript -->
+    <script src="{% static 'js/contact_us.js' %}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
